#COBUMMFO-81# Коментар: Merge

--- a/ABS/master/web/mmfo/barsroot/Areas/Sep/Views/SepLockDocs/Index.cshtml
+++ b/ABS/master/web/mmfo/barsroot/Areas/Sep/Views/SepLockDocs/Index.cshtml
@@ -957,6 +957,14 @@
                 headerAttributes: {
                     style: "white-space: normal;"
                 }
+            },
+            {
+                field: "Ref",
+                title: "Референс",
+                width: 120,
+                headerAttributes: {
+                    style: "white-space: normal;"
+                }
             }
             /*,
             {
@@ -1011,6 +1019,7 @@
                         prty: { type: "number" },
                         datd: { type: "date" },
                         dat_a: { type: "date" }
+                        ,Ref: { type: "string" }
                     }
                 }
             },
